--- a/style.css
+++ b/style.css
@@ -4,14 +4,12 @@
    background-color: rgb(251, 251, 142);
    margin: 0 auto;
    display: grid;
-   grid-template-columns: repeat(16, 1fr);
-   grid-template-rows: repeat(16, 1fr);
 
 }
 .grid-item{
     width: auto;
     height: auto;
-    background-color: blueviolet;
+    background-color:black;
 }
 
 
